tests/NormalTests/paczka1/fuzzy1/73520337.err
Error in line 13: Ti9Up6OX A694 9,5
Error in line 17: Ti9Up6OX S371 17,6
Error in line 21: kU7IvTOP2 S371 61,8
Error in line 25: WhTh A694 57,7
Error in line 22: Ti9Up6OX A694 6,9
Error in line 26: WhTh S678 6,1
Error in line 27: Ti9Up6OX S678 97,3
